- Improved AI - Fixed the emscripted build

--- a/public/index-tmpl.html
+++ b/public/index-tmpl.html
@@ -3,21 +3,21 @@
     <head>
         <meta charset="utf-8">
 
-        <title>GGWeb Template</title>
-        <meta name="description" content="Template for making a web page with C++ / Dear ImGui / SDL / OpenGL / Emscripten">
+        <title>ToepAI</title>
+        <meta name="description" content="Play Toepen online against AI opponents">
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <!-- FB Meta Tags -->
-        <meta property="og:url" content="https://ggerganov.com">
+        <meta property="og:url" content="janrooduijn.com">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="GGWeb Template">
-        <meta property="og:description" content="Template for making a web page with C++ / Dear ImGui / SDL / OpenGL / Emscripten">
+        <meta property="og:title" content="ToepAI">
+        <meta property="og:description" content="Play Toepen online against AI opponents">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="ggerganov.com">
+        <meta property="twitter:domain" content="janrooduijn.com">
 
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
@@ -50,7 +50,7 @@
     <body>
         <div id="main-container">
             <div id="description" align="center">
-                <h2>GGWeb</h2>
+                <h2>ToepAI</h2>
 
                 <div id="container_status" align="center">
                     Loading - please wait ..
@@ -188,8 +188,8 @@
                 preRun: [(function() {
                     console.log(
                             '    Build time: @GIT_DATE@\n' +
-                            '   Github repo: https://github.com/ggerganov/ggweb\n' +
-                            '   Commit hash: https://github.com/ggerganov/ggweb/commit/@GIT_SHA1@"\n' +
+                            '   Github repo: https://github.com/janrooduijn/toepAI\n' +
+                            '   Commit hash: https://github.com/janrooduijn/toepAI/commit/@GIT_SHA1@"\n' +
                             'Commit subject: @GIT_COMMIT_SUBJECT@\n'
                     );
                 })],
